post scrollbar fixes

--- a/src/scss/sections/_product.scss
+++ b/src/scss/sections/_product.scss
@@ -200,7 +200,6 @@
       overflow-x: auto;
       padding-bottom: rem(20);
       max-width: rem(974);
-      width: 300px;
       @include scrollbar(
         rgb(236, 231, 231),
         var(--text-secondary),
